fix tests 2